Forced scrollbar on all pages.

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6,6 +6,8 @@
 
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 html {
+  overflow: -moz-scrollbars-vertical; 
+  overflow-y: scroll;
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
